--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </button>
     </div>
 
-    <section id="produtos-carrinho"></section>
+    <section id="produtos-carrinho" class="h-3/5 overflow-y-auto flex flex-col gap-2"></section>
 
     <p id="preco-total">$200</p>
     <button class="bg-slate-200 text-slate-900 p-1">Finalizar compra</button>
